syntax = "proto3";

package chremoas.esi;

import "common.proto";

service AllianceQuery {
    rpc GetAlliance (EntityQueryRequest) returns (AllianceResponse) {
    };
}

message AllianceResponse {
    Alliance Result = 1;
}

message Alliance {
    int32 Id = 1;
    string Name = 2;
    string Ticker = 3;
    int32 ExecutorCorp = 4;
    int64 DateFounded = 5;
}
