syntax = "proto3";

package chremoas.esi;

service CorporationQuery {
    rpc GetCorporation (EntityQueryRequest) returns (CorporationResponse) {
    };
}

message EntityQueryRequest {
    int32 EntityId = 1;
}

message CorporationResponse {
    Corporation Result = 1;
}

message Corporation {
    int32 Id = 1;
    string Name = 2;
    string Ticker = 3;
    int32 MemberCount = 4;
    int32 CeoId = 5;
    int32 AllianceId = 6;
    string Description = 7;
    float TaxRate = 8;
    int64 CreationDate = 9;
    int32 CreatorId = 10;
    string Url = 11;
    string Faction = 12;
}
